Changelog
=========


0.4.0 (?)
---------
* ...


0.3.0 (2022-03-29)
------------------

* New functions and classes:
  - load.load_module no longer nested in load.module_as_dict
  - npy_util.iterate_dtype
* Bugfixes:
  - files.PreOpenedFile object is now properly iterable
* New unit tests:
  - tests.test_load.TestLoadModule
  - tests.test_load.TestModuleAsDict


0.2.0 (2022-01-27)
------------------

* New modules:
  - npy_util
  - tests.test_numbers
  - tests.test_objects
* New functions and classes:
  - getsizeof, size_type_mapping in objects
  - ndarray_handler added to size_type_mapping in objects
  - isolate_dtype in npy_util
  - as_base, digit_count in numbers
* New unit tests:
  - tests.test_objects.TestGetsizeof
  - tests.test_numbers.TestAsBase
  - tests.test_numbers.TestDigitCount
* Added docs to sdist
* Moved map_array, mask2runs, runs2mask from math to npy_util


0.1.1 (2022-01-16)
------------------

Minor updates to first release.

* New functions and classes:
  - segment_distance in math
* Bugfixes:
  - math.read_divide correctly handles scalar inputs
* Created pytest configuration, added first set of unit tests
  - files.tests.test_csv
  - tests.test_math.TestSegmentDistance
* Improved documentation with autosummary
* Added this CHANGELOG to installed data


0.1 (2022-01-10)
----------------

First release.

* New modules
  - time
  - files.ui
* New functions and classes:
  - json_registry made public in configuration
  - semilogx_base, semilogy_base, loglog_base in mpl_util
  - map_array, rms in math
  - split_extension in files
* API changes:
  - string_util.timestamp moved to time
  - Added mask2runs and runs2mask to math
  - Improvements to NumpyObject in configuration
  - Improvements to copy_func in objects
  - Added n argument to insert_suffix in files
* Bufixes:
  - mpl_util.show_extents axis confusion
  - Broken imports in submodules
* Officially supporting Python versions up to 3.10
* README -> README.md so GitHub can pick it up

